# krdict-rs

./: API_REFERENCE.txt  Cargo.toml  README.md
src/: api.rs  cli.rs  display.rs  main.rs  parser.rs  types.rs
