[package]
name = "krdict"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
quick-xml = { version = "0.39.2", features = ["serialize"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "3.3.0"
url = "2.5.8"
